--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "highideas/laravel-users-online": "^3.0",
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.3",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "yish/imgur": "^1.0",
+        "proengsoft/laravel-jsvalidation": ">2.5.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -59,6 +61,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "php artisan vendor:publish --provider=\"Proengsoft\\JsValidation\\JsValidationServiceProvider\" --tag=public --force"
         ]
     }
 }
