--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
         "proengsoft/laravel-jsvalidation": ">2.5.0",
+        "rennokki/befriended": "^2.0",
         "yish/imgur": "^1.0"
     },
     "require-dev": {
