--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "proengsoft/laravel-jsvalidation": ">2.5.0",
         "rennokki/befriended": "^2.0",
+        "stevebauman/location": "^5.0",
         "yish/imgur": "^1.0"
     },
     "require-dev": {
