--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "cmgmyr/messenger": "^2.19",
         "cybercog/laravel-ban": "^4.2",
         "fideloper/proxy": "^4.0",
         "highideas/laravel-users-online": "^3.0",
