--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/all.js": "/js/all.js?id=4960bad5bea3ee7dcfa2",
-    "/css/app.css": "/css/app.css?id=2a4461fc35df4e8d0a06",
-    "/css/template.css": "/css/template.css?id=d41d8cd98f00b204e980",
-    "/css/all.css": "/css/all.css?id=e0f2485541008f815f72"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
